--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "eltha9",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NUXT_HOST=0.0.0.0 NUXT_PORT=3000 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -14,5 +14,7 @@
     "@nuxtjs/axios": "^5.8.0",
     "nuxt": "^2.10.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "cross-env": "^6.0.3"
+  }
 }
